# experience/schema.js
@@ -2,46 +2,52 @@ const gql = require('graphql-tag');
 
 const typeDefs = gql`
   type Query {
+    # An 'experience' API that allows a client app to pick and choose what data
+    # it wants to retrieve for the current user. The user's identity will be
+    # provided in Authorization headers
     me: Customer!
-    Bookings: [Booking!]!
   }
 
-  type Route {
-    origin: String!
-    destination: String!
+  type Customer {
+    name: String!
+    username: String!
+    bookings: [Booking!]!
+    information: MyInfo!
   }
-  
-  type Flight {
-    number: String!
-    route: Route!
-    scheduled_departure: String!
-    scheduled_arrival: String!
-  }
-  
+
   type Booking {
     ticket_number: String!
     flight: Flight!
     seat: String!
   }
-  
-  type Customer {
-    id: ID!
-    name: String!
-    bookings: [Booking!]!
-    information: CustomerInformation!
+
+  type Flight {
+    number: String!
+    origin: String!
+    destination: String!
+    scheduled_departure: String!
+    scheduled_arrival: String!
+    details: FlightDetails!
   }
-  
-  type CustomerInformation {
+
+  type FlightDetails {
+    aircraft_type: String!
+    flight_number: String!
+    in_flight_entertainment: Boolean!
+    meal_options: [String!]!
+  }
+
+  type MyInfo {
     address: String!
     phoneNumber: String!
     email: String!
     frequentFlierNumber: String
     paymentMethods: [PaymentMethod!]!
   }
-  
+
   type PaymentMethod {
     id: ID!
-    cardNumber: String!
+    redactedCardNumber: String!
     cardholderName: String!
     expirationDate: String!
   }
